feat(backend): Crear servicios y controladores

--- a/registros-futbol-backend/src/main/resources/application.properties
+++ b/registros-futbol-backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=registros-futbol-backend
+spring.datasource.url=jdbc:mysql://localhost:3306/DB_registros_futbol
+spring.datasource.username=jgnarvaez
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
