--- a/registros-futbol-backend/src/main/resources/application.properties
+++ b/registros-futbol-backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/DB_registros_futbol
 spring.datasource.username=jgnarvaez
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.jdbc=DEBUG
