--- a/registros-futbol-backend/pom.xml
+++ b/registros-futbol-backend/pom.xml
@@ -66,14 +66,8 @@
             <version>3.1.0</version>
         </dependency>
 		<dependency>
-    		<groupId>javax.validation</groupId>
-    		<artifactId>validation-api</artifactId>
-    		<version>2.0.1.Final</version>
-		</dependency>
-		<dependency>
-    		<groupId>org.hibernate.validator</groupId>
-    		<artifactId>hibernate-validator</artifactId>
-    		<version>6.0.13.Final</version>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 
