--- a/registros-futbol-backend/src/main/resources/application.properties
+++ b/registros-futbol-backend/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.validator=DEBUG
+logging.level.root=INFO
